UpdateDlg, TreeView, Files View

--- a/WinFormApp/TestsView/TestsForm.resx
+++ b/WinFormApp/TestsView/TestsForm.resx
@@ -117,4 +117,77 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
+  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACo
+        DgAAAk1TRnQBSQFMAgEBAwEAARABAAEQAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABEAMAAQEBAAEgBgABECYAAwIBAwMbASYDMAFYAjQBOQF1AysBSAMTARkoAAMCAQMDGwEmAzABWAE0
+        ATkBOAF1AysBSAMTARkYAAQBAwQBBQMMAQ4DDQEQAw0BEAMNARADDQEQAw0BEAMNARADDQEQAw0BEAMN
+        AQ8DCAEJBAJUAAIpASoBRAInAZsB/wIAAYsB/wIAAY4B/wIAAZEB/wIAAZUB/wIAAZgB/wINAYUB7gMX
+        ASAcAAEpAioBRAEnAZsBawH/AQABiwFUAf8BAAGOAVgB/wEAAZEBXQH/AQABlQFjAf8BAAGYAWgB/wEN
+        AYUBYQHuAxcBIBAAAQcBXwGWAf8BCQGAAdEB/wEdAaIB3gH/AR4BrQHfAf8BHgGxAeIB/wEeAbUB4gH/
+        AR4BtQHkAf8BHgG2AeQB/wEeAbUB4wH/AR4BsgHiAf8BHgGuAeEB/wEeAacB3wH/ARsBlQHYAf8BAQFj
+        AbIB/1AAAjMBUwGvAgEBjAH+AgABkQH/AgABlAH/AgABlwH/AgABmwH/AgABngH/AgABoQH/AgEBowH+
+        AgEBpwH+AyUBOhQAATMBUwFGAa8BAQGMAVUB/gEAAZEBWQH/AQABlAFdAf8BAAGXAWIB/wEAAZsBZwH/
+        AQABngFsAf8BAAGhAXEB/wEBAaMBeAH+AQEBpwF9Af4DJQE6DAABFwGiAd8B/wEAAYoB1wH/AQABlwHb
+        Af8BAAGeAd8B/wEAAaQB4AH/AQABqQHjAf8BAAGtAeMB/wEAAa0B5AH/AQABqwHjAf8BAAGmAeAB/wEA
+        AaAB3wH/AQABmQHcAf8BAAGPAdoB/wEAAYIB1QH/ASsBXwGAAclIAAI0ATsBcQIAAZYB/wIAAZkB/wIA
+        AZwB/wIAAZ8B/wIAAaIB/wIAAaUB/wIAAagB/wIAAasB/wIAAa8B/wIAAbIB/wIAAbYB/wMVAR0MAAE0
+        ATsBOQFxAQABlgFbAf8BAAGZAV8B/wEAAZwBZAH/AQABnwFoAf8BAAGiAW0B/wEAAaUBcgH/AQABqAF3
+        Af8BAAGrAXwB/wEAAa8BgQH/AQABsgGHAf8BAAG2AY0B/wMVAR0IAAEwAX4BsAH/AQABmAHgAf8BAAGg
+        AeQB/wEAAaoB5wH/AQABsQHoAf8BAAG3AeoB/wExAXsBnQH/ARABVgF8Af8BAAG5AeoB/wEAAbMB6AH/
+        AQABrQHnAf8BAAGkAeUB/wEAAZoB4QH/AUQBygHvAf9IAAMHAQkCAQGgAf8CAAGiAf8CAQGiAf4CygHn
+        Af8CAAGjAf8CAAGtAf8CAAGwAf8CAAGzAf8CKQGwAf8CJQGxAf4CAQG6Af4CAQG+Af4CDwGiAe0IAAMH
+        AQkBAQGgAWQB/wEAAaIBZgH/AQEBogFsAf4BAAGmAW4B/wHKAegB3gH/AQABpQFzAf8BAAGwAX0B/wEA
+        AbMBggH/AQABtgGHAf8BAQG3AYoB/gEBAboBkAH+AQEBvgGVAf4BDwGiAYMB7QwAAUoBzAHyAf8BAAGr
+        AesB/wEAAbYB7QH/AQABvgHwAf8BAAHFAfEB/wECAbkB4AH/AQkBdAGXAf8BAAHIAfEB/wEAAcEB8QH/
+        AQABuQHuAf8BAAGvAewB/wEVAa8B7AH/ATcBVAFnAZZIAAI0AUABdgIAAasB/wIAAa4B/wIBAa4B/gLb
+        AfAF/wIAAbAB/wIAAbsB/wIpAbQF/wIeAbUB/gIBAcQB/gIBAccB/gIBAckB/gMPARQEAAE0AUABPAF2
+        AQABqwFuAf8BAAGuAXIB/wEBAa0BdwH+AfEB+QH3Cf8BAAGyAYMB/wEAAb0BjQH/AQABwAGSAf8BAQHB
+        AZUB/gEBAcQBmgH+AQEBxwGfAf4BAQHJAaQB/gMPARQIAAEXAWkBngH/AQABtAHyAf8BAAHBAfQB/wEA
+        AcoB9QH/AQAB0gH3Af8BAAHYAfkB/wEcAd0B+gH/AQAB1QH3Af8BAAHNAfYB/wEAAcQB9AH/AQABuQHy
+        Af8BUQGzAdoB/0wAAh8BuwH+AgABuAH/AgABugH/AgEBugH+AgABvgH/AtsB8QX/AikBtQX/Ah0BvAH/
+        AgEBywH+AgEBzgH+AgEB0AH+AgEB0gH+AycBPQQAAR8BuwGEAf4BAAG4AXoB/wEAAboBfgH/Ae8B9wH1
+        Af4E/wEAAboBhgH/AdsB8gHsBf8BAAG/AZIB/wEAAcsBnQH/AQEBywGgAf4BAQHOAaQB/gEBAdABqQH+
+        AQEB0gGtAf4DJwE9DAABdAHgAfwB/wECAccB+QH/AQIB1AH7Af8BAgHcAfwB/wELAeQB/AH/ATQBpAG+
+        Af8BAgHeAfwB/wECAdcB+wH/AQIBzAH5Af8BUgHXAfsB/wEnASsBLgE8TAACIQHKAf8CAQHEAf8CAAHG
+        Af8CAQHGAf4CAAHKAf8CAAHLAf8C3AHyBf8CHQG8Af8CAQHVAf8CDAHWAf4CDQHYAf4CDQHaAf4CCAHb
+        Af4CMwE6AWgEAAEhAcoBkwH/AQEBxAGHAf8BAAHGAYoB/wGQAdsBxQH+AQABxAGOAf8BAAHMAZcB/wEA
+        Ac0BmgH/AdsB8wHtBf8BAQHLAaEB/wEMAdYBrgH+AQ0B2AGyAf4BDQHaAbUB/gEIAdsBuAH+ATMBOgE4
+        AWgMAAE0AVcBbgGlARcB0AL/AQ4B1wL/AQ4B4AL/ATkBrwHHAf8BGQFhAYUB/wEOAeQC/wEOAdoC/wEO
+        AdEC/wExAYgBuAH/UAACJgHVAf8CIwHVAf8CIwHXAf8CHAHVAf4CBwHVAf8CKQHGBf8C3wH0Bf8CIQHY
+        Af8CJAHhAf4CJAHiAf4CJAHkAf4CJAHlAf4DLAFJBAABJgHVAaAB/wEjAdUBoQH/ASMB1wGkAf8BHAHV
+        AaIB/gEHAdUBoQH/AQAB1gGiAf8BDwHaAasB/wEjAd4BtQH/Ad8B9QHwBf8BIgHXAbUB/gEkAeIBwAH+
+        ASQB5AHEAf4BJAHlAccB/gMsAUkQAAGEAd0B+AH/ASIB2AL/ASMB4AL/ASkBdAGVAf8BEAFWAXwB/wEk
+        AeIC/wEjAdsC/wGYAecC/1QAAjIBeAG5Aj8B4wH/Aj8B5AH/AkAB4wH+AlgB0gX/Ak8B0wH/Aj8B6AH/
+        AuMB9gX/Aj0B4AH+AkAB7AH+AkAB7AH+AkAB7QH+AxMBGQQAATIBeAFlAbkBPwHjAbYB/wE/AeQBuQH/
+        AUAB4wG5Af4BPwHmAb4B/wE/AegBwQH/AT8B6AHEAf8BPwHqAcYB/wE/AeoByAH/AeMB9gHzAf8D/AH+
+        AT0B4QHGAf4BQAHsAdEB/gFAAe0B0wH+AxMBGRAAATcBRwFSAXIBZAHfAv8BOwHeAv8BHQFsAYsB/wEP
+        AVIBdgH/ATsB3wL/ATwB2gL/AQ4BYgGYAf9UAAMMAQ8CXwHuAf8CXwHvAf8CXwHuBf8CaAHZAf8CXwHx
+        Af8CXwHyAf8CXwHxAf8C5gH3Af8C0QHzAf8CXwH0Af8CXwH1Af8CbgH2Af8EAQQAAwwBDwFfAe4ByAH/
+        AV8B7wHKAf8BXwHvAc0B/wFfAfABzwH/AV8B8AHRAf8BXwHxAdMB/wFfAfIB1QH/AV8B8gHXAf8BXwHy
+        AdgB/wHmAfcB9AH/AdEB8wHuAf8BXwH1Ad8B/wFuAfYB4wH/BAEUAAFnAbsB3QH/AVIB3gL/AVMB4QL/
+        AVMB4QL/AVIB3wL/AZwB5wH+Af9cAAJPAdcB8QJ/AfYB/wJ/AfYB/wJ/AfYB/wJ/AfcB/wJ/AfcB/wJ/
+        AfgB/wJ/AfgB/wJ/AfgB/wJ/AfkB/wJ/AfkB/wJ/AfkB/wIgASEBMAwAAU8B1wG2AfEBfwH2AdoB/wF/
+        AfYB2wH/AX8B9wHdAf8BfwH3Ad8B/wF/AfcB4AH/AX8B+AHiAf8BfwH4AeMB/wF/AfgB5AH/AX8B+QHm
+        Af8BfwH5AecB/wF/AfkB6AH/ASABIQEgATAYAAEYARkBGgEhAawB7QL/AWkB5wL/AWkB5wL/AYAB6QL/
+        ATgBUAFgAYpcAAQCApQB+gH/Ap0B+wH/Ap0B+wH/Ap0B+wH/Ap0B+wH/Ap0B/AH/Ap0B/AH/Ap0B/AH/
+        Ap0B/AH/Ap0B/AH/AjoBbQGnEAAEAgGUAfoB4wH/AZ0B+wHnAf8BnQH7AegB/wGdAfsB6QH/AZ0B+wHq
+        Af8BnQH8AesB/wGdAfwB7AH/AZ0B/AHtAf8BnQH8Ae4B/wGdAfwB7wH/AToBbQFmAacgAAFAAZ0BxAH/
+        AXgB7wL/AXoB7wL/AaEB4QH0Af9kAAQCAn4B3wHwArcB/gH/ArcB/gH/ArcB/gH/ArcB/gH/ArcB/gH/
+        ArcB/gH/ArcB/gH/AjMBPAFhGAAEAgF+Ad8BygHwAbcB/gHwAf8BtwH+AfAB/wG3Af4B8QH/AbcB/gHy
+        Af8BtwH+AfIB/wG3Af4B8wH/AbcB/gH0Af8BMwE8ATsBYSgAAcoB9QL/Ac8B9QL/AScBKwEuATxsAAMJ
+        AQsCTQGDAbUCoAL/AroC/wKDAfsB/QI0AUEBaQMDAQQkAAMJAQsBTQGDAXkBtQGgAf8B7wH/AboB/wH0
+        Af8BgwH7AegB/QE0AUEBPwFpAwMBBP8AkQABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGA
+        FwAD/wEAAfgBHwH4AR8BgAEBAgAB8AEHAfABBwGAAQECAAHgAQMB4AEDAYADAAHAAQEBwAEBAYABAQIA
+        AYABAQGAAQEBwAEBAgABgAEAAYABAAHAAQMCAAGAAQABgAEAAeABAwIAAYABAAGAAQAB4AEHAgABgAEA
+        AYABAAHwAQ8CAAGAAQABgAEAAfABDwIAAYABAAGAAQAB+AEfAgABwAEBAcABAQH4AR8CAAHAAQMBwAED
+        AfwBPwIAAeABBwHgAQcB/gE/AgAB+AEPAfgBDwL/AgAG/wIACw==
+</value>
+  </data>
 </root>
